# git-status-tree

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/git_status_tree/: __init__.py
