[project]
name = "git-status-tree"
version = "0.1.0"
description = "git status -s, but as a tree"
authors = [
    { name = "Alexis Daboville" }
]
dependencies = [
    "anytree>=2.12.1",
    "gitpython>=3.1.43",
    "colorama>=0.4.6",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"git-status-tree" = "git_status_tree:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/git_status_tree"]
